--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^25.3.0",
     "chalk": "^5.6.2",
     "commander": "^12.1.0",
+    "open": "^10.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
     "uuid": "^13.0.0",
