--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "^5.9.3",
     "uuid": "^13.0.0",
     "vm2": "^3.10.5",
+    "winston": "^3.19.0",
     "zod": "^4.3.6"
   },
   "devDependencies": {
