--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "scripts": {
     "build": "tsc",
     "prepublishOnly": "npm run build",
-    "dev:cli": "tsx src/cli/index.ts"
+    "dev:cli": "tsx src/cli/index.ts",
+    "test": "vitest"
   },
   "keywords": [
     "mcp",
@@ -32,6 +33,7 @@
     "@types/node": "^25.3.0",
     "chalk": "^5.6.2",
     "commander": "^12.1.0",
+    "isolated-vm": "^6.0.2",
     "open": "^10.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
@@ -41,6 +43,8 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
-    "tsx": "^4.21.0"
+    "@vitest/ui": "^4.0.18",
+    "tsx": "^4.21.0",
+    "vitest": "^4.0.18"
   }
 }
