fix: use prepare script so npx from git URL works

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "npm run build",
+    "prepare": "npm run build",
     "dev": "tsx src/cli/index.ts",
     "test": "vitest",
     "test:e2e": "vitest run src/mcp/e2e-bridge-runner.test.ts"
