ci: add GitHub Release with prebuilt tarball to publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -12,7 +12,7 @@ on:
         type: string
 
 permissions:
-  contents: read
+  contents: write
   packages: write
 
 jobs:
@@ -44,7 +44,21 @@ jobs:
         if: github.event_name == 'workflow_dispatch' && inputs.version != ''
         run: npm version "${{ inputs.version }}" --no-git-tag-version
 
-      - name: Publish
+      - name: Read package version
+        id: pkg
+        run: echo "version=$(node -p 'require("./package.json").version')" >> "$GITHUB_OUTPUT"
+
+      - name: Publish to GitHub Packages
         run: npm publish
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Pack tarball
+        run: npm pack
+
+      - name: Create GitHub Release with tarball
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v2
+        with:
+          files: ruifung-codemode-bridge-${{ steps.pkg.outputs.version }}.tgz
+          generate_release_notes: true
