--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@ruifung/codemode-bridge",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "MCP bridge that connects to upstream MCP servers and exposes tools via a single codemode tool for orchestration",
   "main": "dist/index.js",
   "bin": {
@@ -26,7 +26,7 @@
     "orchestration"
   ],
   "author": "",
-  "license": "ISC",
+  "license": "Apache-2.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/ruifung/mcp-cm-bridge.git"
