--- a/package.json
+++ b/package.json
@@ -38,7 +38,6 @@
     "acorn": "^8.16.0",
     "chalk": "^5.6.2",
     "commander": "^12.1.0",
-    "isolated-vm": "^6.0.2",
     "open": "^10.1.0",
     "uuid": "^13.0.0",
     "vm2": "^3.10.5",
@@ -51,5 +50,8 @@
     "tsx": "^4.21.0",
     "typescript": "^5.9.3",
     "vitest": "^4.0.18"
+  },
+  "optionalDependencies": {
+    "isolated-vm": "^6.0.2"
   }
 }
