--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "prepare": "npm run build",
     "dev": "tsx src/cli/index.ts",
     "test": "vitest",
-    "test:e2e": "vitest run src/mcp/e2e-bridge-runner.test.ts"
+    "test:e2e": "vitest run src/mcp/e2e-bridge-runner.test.ts --reporter=verbose"
   },
   "keywords": [
     "mcp",
