--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "config"
   ],
   "scripts": {
-    "build": "tsc && cp src/executor/*.mjs dist/executor/",
+    "build": "tsc && shx cp src/executor/*.mjs dist/executor/",
     "prepare": "npm run build",
     "dev": "tsx src/cli/index.ts",
     "dev:bun": "bun run src/cli/index.ts",
