Re-add CLI based container executor to ensure bun has something to use

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "acorn": "^8.16.0",
     "chalk": "^5.6.2",
     "commander": "^12.1.0",
+    "dockerode": "^4.0.9",
     "open": "^10.1.0",
     "uuid": "^13.0.0",
     "vm2": "^3.10.5",
@@ -48,6 +49,7 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/dockerode": "^4.0.1",
     "@types/node": "^25.3.0",
     "@vitest/ui": "^4.0.18",
     "shx": "^0.4.0",
