--- a/package.json
+++ b/package.json
@@ -34,7 +34,6 @@
   },
   "type": "module",
   "dependencies": {
-    "@cloudflare/codemode": "^0.1.0",
     "@modelcontextprotocol/sdk": "^1.27.0",
     "acorn": "^8.16.0",
     "chalk": "^5.6.2",
@@ -44,7 +43,8 @@
     "uuid": "^13.0.0",
     "vm2": "^3.10.5",
     "winston": "^3.19.0",
-    "zod": "^4.3.6"
+    "zod": "^4.3.6",
+    "zod-to-ts": "^2.0.0"
   },
   "devDependencies": {
     "@types/dockerode": "^4.0.1",
