--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "chalk": "^5.6.2",
     "commander": "^12.1.0",
     "dockerode": "^4.0.9",
+    "js-yaml": "^4.1.1",
     "open": "^10.1.0",
     "uuid": "^13.0.0",
     "vm2": "^3.10.5",
@@ -48,6 +49,7 @@
   },
   "devDependencies": {
     "@types/dockerode": "^4.0.1",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^25.3.0",
     "@vitest/ui": "^4.0.18",
     "shx": "^0.4.0",
